src/main/resources/Krakatau-master/tests/assembler/good/bs0.j
.class test
.super java/lang/Object

.bootstrap [bs:0] = Bootstrap invokeStatic Method LambdaTest1 lambda$main$0 (J)J :
.end class
