src/main/resources/Krakatau-master/tests/assembler/bad/badcircularcp.j
.class public Nest
.super java/lang/Object

.const [1] = Class [r1]
.const [r1] = Class [r1]


.end class